--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-tensorflow
-streamlit
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+seaborn==0.13.2
+scikit-learn==1.4.1.post1
+tensorflow==2.16.1
+streamlit==1.35.0
+joblib==1.4.2
